--- a/src/app/Components/student/student.component.html
+++ b/src/app/Components/student/student.component.html
@@ -1,1 +1,24 @@
-<p>student works!</p>
+<body>
+  <div class="custom-container">
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>DNI</th>
+          <th>First name</th>
+          <th>Last name</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
