--- a/src/app/Components/student/student.component.html
+++ b/src/app/Components/student/student.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="custom-container">
+  <div style="padding-top: 2%; padding-bottom: 2%;" class="custom-container">
     <table class="table table-dark">
       <thead>
         <tr>
@@ -11,14 +11,45 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr *ngFor="let student of studentList">
+          <td>{{ student.id }}</td>
+          <td>{{ student.dni }}</td>
+          <td>{{ student.firstName }}</td>
+          <td>{{ student.lastName }}</td>
+          <td>{{ student.email }}</td>
         </tr>
       </tbody>
     </table>
+    <button style="float:left; margin-left: 1%" type="button" class="btn btn-dark" (click)="getStudents()">Refresh</button>
+    <button style="float:right; margin-right: 1%" type="button" class="btn btn-dark" (click)="openForm()">Add student</button>
+  </div>
+  <br>
+  <div style="margin-top:4%" *ngIf="formVisible" class="form-container">
+    <div class="card bg-dark text-white">
+      <form style="margin: 3%">
+        <div class="form-group">
+          <label for="exampleInputEmail1">ID</label>
+          <div class="custom-input"></div>
+        </div>
+        <div class="form-group custom-input">
+          <label for="exampleInputPassword1">DNI</label>
+          <input type="number" class="form-control" placeholder="Enter DNI">
+        </div>
+        <div class="form-group custom-input">
+          <label for="exampleInputPassword1">First name</label>
+          <input type="text" class="form-control" placeholder="Enter first name">
+        </div>
+        <div class="form-group custom-input">
+          <label for="exampleInputPassword1">Last name</label>
+          <input type="text" class="form-control" placeholder="Enter last name">
+        </div>
+        <div class="form-group custom-input">
+          <label for="exampleInputPassword1">Email</label>
+          <input type="email" class="form-control" placeholder="Enter email">
+        </div>
+        <button style="margin-top: 2%;" type="submit" class="btn btn-primary">Submit</button>
+        <button style="margin-top: 2%; float:right" type="submit" class="btn btn-danger" (click)="cancelForm()">Cancel</button>
+      </form>
+    </div>
   </div>
 </body>
