--- a/src/app/Components/student/student.component.html
+++ b/src/app/Components/student/student.component.html
@@ -20,8 +20,10 @@
         </tr>
       </tbody>
     </table>
-    <button style="float:left; margin-left: 1%" type="button" class="btn btn-dark" (click)="getStudents()">Refresh</button>
-    <button style="float:right; margin-right: 1%" type="button" class="btn btn-dark" (click)="openForm()">Add student</button>
+    <div style="display: flex; justify-content: space-between;">
+      <button type="button" class="btn btn-dark" (click)="getStudents()">Refresh</button>
+      <button type="button" class="btn btn-dark" (click)="openForm()">Add student</button>
+    </div>
   </div>
   <br>
   <div style="margin-top:4%" *ngIf="formVisible" class="form-container">
