--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,12 @@
   width: 100%;
   max-width: 800px !important;
   margin: 0 auto !important;
-  text-align: center;
 }
 .form-container {
   width: 100%;
   max-width: 800px !important;
   margin: 0 auto !important;
+}
+tr.selected {
+  background-color: #ccc;
 }
