--- a/src/app/Components/student/student.component.html
+++ b/src/app/Components/student/student.component.html
@@ -1,57 +1,120 @@
 <body>
-  <div style="padding-top: 2%; padding-bottom: 2%;" class="custom-container">
-    <table class="table table-dark">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>DNI</th>
-          <th>First name</th>
-          <th>Last name</th>
-          <th>Email</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let student of studentList">
-          <td>{{ student.id }}</td>
-          <td>{{ student.dni }}</td>
-          <td>{{ student.firstName }}</td>
-          <td>{{ student.lastName }}</td>
-          <td>{{ student.email }}</td>
-        </tr>
-      </tbody>
-    </table>
-    <div style="display: flex; justify-content: space-between;">
-      <button type="button" class="btn btn-dark" (click)="getStudents()">Refresh</button>
-      <button type="button" class="btn btn-dark" (click)="openForm()">Add student</button>
+  <div class="container">
+    <div class="custom-container col-lg-6 offset-lg-6">
+      <div class="title mb-2">
+        <h4>STUDENTS LIST</h4>
+      </div>
+      <table class = "table table-dark">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">First name</th>
+            <th scope="col">Last name</th>
+            <th scope="col">DNI</th>
+            <th scope="col">Email</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let student of studentList" class="table-dark">
+            <td scope="row">{{student.id}}</td>
+            <td scope="row">{{student.firstName}}</td>
+            <td scope="row">{{student.lastName}}</td>
+            <td scope="row">{{student.dni}}</td>
+            <td scope="row">{{student.email}}</td>
+            <td><button type="button" class="btn btn-outline-warning btn-sm">Edit</button></td>
+            <td><button type="button" class="btn btn-outline-danger btn-sm">Delete</button></td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row mt-2 text-center">
+        <div class="col-lg-6">
+          <button type="button" class="btn btn-dark" (click)="getStudents()">Refresh</button>
+        </div>
+        <div class="col-lg-6">
+          <button type="button" class="btn btn btn-success" (click)="openForm()">Add student</button>
+        </div>
+      </div>
     </div>
-  </div>
-  <br>
-  <div style="margin-top:4%" *ngIf="formVisible" class="form-container">
-    <div class="card bg-dark text-white">
-      <form style="margin: 3%">
-        <div class="form-group">
-          <label for="exampleInputEmail1">ID</label>
-          <div class="custom-input"></div>
+
+    <br>
+
+    <div>
+      <div style="margin-top:4%" *ngIf="formVisible" class="form-container">
+        <div class="card bg-dark text-white">
+          <form style="margin: 3%">
+            <div class="form-group">
+              <label>ID</label>
+              <div class="custom-input"></div>
+            </div>
+            <div class="form-group custom-input">
+              <label>First name</label>
+              <input type="text" [formControl]="firstName" class="form-control" placeholder="Enter first name">
+              <div class="alert alert-danger mt-2" [hidden]="firstName.valid || firstName.pristine">Required field</div>
+            </div>
+            <div class="form-group custom-input">
+              <label>Last name</label>
+              <input type="text" [formControl]="lastName" class="form-control" placeholder="Enter last name">
+              <div class="alert alert-danger mt-2" [hidden]="lastName.valid || lastName.pristine">Required field</div>
+            </div>
+            <div class="form-group custom-input">
+              <label>DNI</label>
+              <input type="number" [formControl]="dni" class="form-control" placeholder="Enter DNI">
+              <div class="alert alert-danger mt-2" [hidden]="dni.valid || dni.pristine">Required field</div>
+            </div>
+            <div class="form-group custom-input">
+              <label>Email</label>
+              <input type="email" [formControl]="email" class="form-control" placeholder="Enter email">
+              <div class="alert alert-danger mt-2" [hidden]="email.valid || email.pristine">
+                <span *ngIf="email.errors?.['required']">Required field</span>
+                <span *ngIf="email.errors?.['email']">Invalid email</span>
+              </div>
+            </div>
+            <button style="margin-top: 2%;" type="submit" class="btn btn-primary" (click)="addStudent()">Submit</button>
+            <button style="margin-top: 2%; float:right" type="submit" class="btn btn-danger" (click)="cancelForm()">Cancel</button>
+          </form>
         </div>
-        <div class="form-group custom-input">
-          <label for="exampleInputPassword1">DNI</label>
-          <input type="number" class="form-control" placeholder="Enter DNI">
-        </div>
-        <div class="form-group custom-input">
-          <label for="exampleInputPassword1">First name</label>
-          <input type="text" class="form-control" placeholder="Enter first name">
-        </div>
-        <div class="form-group custom-input">
-          <label for="exampleInputPassword1">Last name</label>
-          <input type="text" class="form-control" placeholder="Enter last name">
-        </div>
-        <div class="form-group custom-input">
-          <label for="exampleInputPassword1">Email</label>
-          <input type="email" class="form-control" placeholder="Enter email">
-        </div>
-        <button style="margin-top: 2%;" type="submit" class="btn btn-primary">Submit</button>
-        <button style="margin-top: 2%; float:right" type="submit" class="btn btn-danger" (click)="cancelForm()">Cancel</button>
-      </form>
+      </div>
     </div>
+
+    <div>
+      <div style="margin-top:4%" *ngIf="formVisible" class="form-container">
+        <div class="card bg-dark text-white">
+          <form style="margin: 3%">
+            <div class="form-group">
+              <label>ID</label>
+              <div class="custom-input"></div>
+            </div>
+            <div class="form-group custom-input">
+              <label>First name</label>
+              <input type="text" [formControl]="firstName" [(ngModel)]="firstName" class="form-control" placeholder="Enter first name">
+              <div class="alert alert-danger mt-2" [hidden]="firstName.valid || firstName.pristine">Required field</div>
+            </div>
+            <div class="form-group custom-input">
+              <label>Last name</label>
+              <input type="text" [formControl]="lastName" [(ngModel)]="lastName" class="form-control" placeholder="Enter last name">
+              <div class="alert alert-danger mt-2" [hidden]="lastName.valid || lastName.pristine">Required field</div>
+            </div>
+            <div class="form-group custom-input">
+              <label>DNI</label>
+              <input type="number" [formControl]="dni" [(ngModel)]="dni" class="form-control" placeholder="Enter DNI">
+              <div class="alert alert-danger mt-2" [hidden]="dni.valid || dni.pristine">Required field</div>
+            </div>
+            <div class="form-group custom-input">
+              <label>Email</label>
+              <input type="email" [formControl]="email" [(ngModel)]="email" class="form-control" placeholder="Enter email">
+              <div class="alert alert-danger mt-2" [hidden]="email.valid || email.pristine">
+                <span *ngIf="email.errors?.['required']">Required field</span>
+                <span *ngIf="email.errors?.['email']">Invalid email</span>
+              </div>
+            </div>
+            <button style="margin-top: 2%;" type="submit" class="btn btn-primary" (click)="addStudent()">Submit</button>
+            <button style="margin-top: 2%; float:right" type="submit" class="btn btn-danger" (click)="cancelForm()">Cancel</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
