--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,14 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+body{
+  background: #757F9A;
+  background: -webkit-linear-gradient(to top, #D7DDE8, #757F9A);
+  background: linear-gradient(to top, #D7DDE8, #757F9A);
+  height: 100vh;
+}
 .custom-container {
   width: 100%;
   max-width: 800px !important;
-  margin: 0 auto !important;
+  margin: 0 auto; 
 }
 .form-container {
   width: 100%;
